--- a/index.html
+++ b/index.html
@@ -2,4 +2,4 @@
     "@upfundme/upfundme-update-ufm-whale-packages-limited",
     "@phoenixwren/upfundme-first-aid-kit-supplies-1",
 ],
-"notices":[]}
+"notices":["permalink":"@upfundme/upfundme-update-ufm-whale-packages-limited","tag":"Announcement"]}
