--- a/index.html
+++ b/index.html
@@ -2,4 +2,7 @@
     "@upfundme/upfundme-update-ufm-whale-packages-limited",
     "@phoenixwren/upfundme-first-aid-kit-supplies-1",
 ],
-"notices":["permalink":"@upfundme/upfundme-update-ufm-whale-packages-limited","tag":"Announcement"]}
+"notices":[
+    {"permalink":"@upfundme/upfundme-update-ufm-whale-packages-limited","tag":"Announcement"},
+    {"permalink":"@upfundme/a-note-on-posting-restrictions-reduced-inflation-and-power-up-bonus","tag":"Announcement"}
+]}
