--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 {"pinned_posts":[
     "@upfundme/upfundme-update-ufm-whale-packages-limited",
-    "@phoenixwren/upfundme-first-aid-kit-supplies-1"],
+    "@phoenixwren/upfundme-first-aid-kit-supplies-1"
+],
 "notices":[
     {"permalink":"@upfundme/upfundme-update-ufm-whale-packages-limited","tag":"Announcement"},
     {"permalink":"@upfundme/a-note-on-posting-restrictions-reduced-inflation-and-power-up-bonus","tag":"Announcement"}
