--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-{"pinned_posts":[
-    "@upfundme/upfundme-update-ufm-whale-packages-limited",
-    "@phoenixwren/upfundme-first-aid-kit-supplies-1"],
+{"pinned_posts":["@upfundme/upfundme-update-ufm-whale-packages-limited", "@phoenixwren/upfundme-first-aid-kit-supplies-1"],
 "notices":[
     {"permalink":"@upfundme/upfundme-update-ufm-whale-packages-limited","tag":"Announcement"},
     {"permalink":"@upfundme/a-note-on-posting-restrictions-reduced-inflation-and-power-up-bonus","tag":"Announcement"}
