--- a/gov/index.html
+++ b/gov/index.html
@@ -142,7 +142,7 @@ var format = {
     <h3>Basic</h3>
     <p>The most basic example simply generates a table whose columns are the keys of the data array's objects.</p>
     <pre class="prettyprint">
-var string = file_get_contents("gov_weight.json");
+$string = file_get_contents("gov_weight.json");
 var data = json_decode(json_decode($string, true));
 $('#basic').table(data);</pre>
     <div id="basic" class="scroll"></div>
